--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,10 @@ file(GLOB_RECURSE PROJECT_SOURCES
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(CURL REQUIRED libcurl)
 pkg_check_modules(CJSON REQUIRED libcjson)
+pkg_check_modules(WEBSOCKETS REQUIRED libwebsockets)
 
-set(INCLUDE_DIRS ${CURL_INCLUDE_DIRS} ${CJSON_INCLUDE_DIRS})
-set(INCLUDE_LIBRARIES ${CURL_LIBRARIES} ${CJSON_LIBRARIES})
+set(INCLUDE_DIRS ${CURL_INCLUDE_DIRS} ${CJSON_INCLUDE_DIRS} ${WEBSOCKETS_INCLUDE_DIRS})
+set(INCLUDE_LIBRARIES ${CURL_LIBRARIES} ${CJSON_LIBRARIES} ${WEBSOCKETS_LIBRARIES})
 
 include_directories(${INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
